Jeu_de_tests/error/redefinition_local_parametre.tpc
/* parametre - variable local */

int main(int a){
    int a;
    return 0;
}
